--- a/index.html
+++ b/index.html
@@ -3,62 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Azhar's Personal site </title>
+    <title>Azhar's Personal Site</title>
 </head>
 <body>
-    <table cellspacing="10">
+    <table cellspacing="20">
         <tr>
-            <td><img src="Images/simon.png" alt="simon profile picture"></td>
-            <td><h1>Sayed Azhar</h1>
-                <p><em>Founder of <strong><a href="https://www.youtube.com/">YouTube Channel</a></strong>.</em></p>
-                <p>I am a Student here at Shree L.R. Tiwari College of Engineering,Mira Road, Studing ECS in second year and current a web developer</p></td>
+            <td><img src="images/37268474-fake-human-circle-img.png" alt="Azhar's Profile Picture"></td>
+            <td><h1>Azhar Sayed</h1>
+                <p>I'm Going to become a developer</p>
+                <p><em>I am a student</em> at <strong>SLRTCE</strong></p></td>
         </tr>
     </table>
-    <hr size="3">
-    <h3>EDUCATION</h3>
+    <hr>
+    <h3>Books and Teaching</h3>
     <ul>
-        <li>NH School: Studied from Standard First to Tenth</li>
-        <li><a href="https://royalcollegemiraroad.edu.in/ ">Royal College</a>: Studied Eleventh and Twelth</li>
-        <li><a href="https://slrtce.in/">LR</a>: Studied Engineering Course of Four Years</li>
+        <li>School: N.H. English Academy</li>
+        <li>College: Royal College of Arts, Science and Commerce</li>
+        <li>Higher Studies: Shree L.R. Tiwari College of Engineering</li>
     </ul>
     <hr>
     <h3>Work Experience</h3>
-    <table>
+    <table cellspacing="10">
         <thead>
-            <th>Dates</th>
-            <th>Work</th>
+            <tr> 
+                <th>Years</th>
+                <th>Experience</th>
+            </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>2010-2013</td>
-                <td>Timepass Expert</td>
-            </tr>
-            <tr>
-                <td>2023</td>
-                <td>Delievery Expert</td>
-            </tr>
-        </tbody>    
+        <tr>
+            <td>2003</td>
+            <td>Experienced being born</td>
+        </tr>
+        <tr>
+            <td>2020-2024</td>
+            <td>Experienced Engineering</td>
+        </tr>
+        </tbody>
     </table>
     <hr>
-    <h3>Skills</h3>
-    <table cellspacing="10">
-                    <tr>
-                        <td>Ios Development</td>
-                        <td>⭐⭐⭐⭐⭐</td>
-                
-                    </tr>
-                    <tr>
-                        <td>Web Development</td>
-                        <td>⭐⭐⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>Python</td>
-                        <td>⭐⭐⭐⭐⭐</td>
-                    </tr>
-                </table>
-     <hr> 
-    <a href="hobbies.html">MY HOBBIES</a>
-    <br>
-    <a href="contacts.html">CONTACT ME</a>
+        <h3>Skills</h3>
+        <table cellspacing="10">
+            <tr>
+                <td>Web Development</td>
+                <td>⭐⭐⭐⭐⭐</td>
+                <td>Photography</td>
+                <td>⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>App Development</td>
+                <td>⭐⭐⭐⭐</td>
+                <td>Drawing</td>
+                <td>⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>Programming</td>
+                <td>⭐⭐⭐⭐</td>
+                <td>Journalling</td>
+                <td>⭐</td>
+            </tr>
+        </table>
+        <hr>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contactme.html">Contact Me</a>
 </body>
 </html>
