--- a/hobbies.html
+++ b/hobbies.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MY HOBBIES</title>
+    <title>My hobbies</title>
 </head>
 <body>
-    <h3>Hobbies</h3>
+    <h3>My Hobbies</h3>
     <ol>
-        <li>Surfing Internet</li>
-        <li>Trying New things
-        <li>Timepass</li>
+        <li>Watching <a href="https://animepahe.ru/">Anime</a></li>
+        <li>Doing Crazy Stuffs</li>
+        <li>chilling</li>
     </ol>
-
+    <hr>
     
 </body>
 </html>
