--- a/contacts.html
+++ b/contacts.html
@@ -3,27 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONTACT ME</title>
+    <title>Contact Me</title>
 </head>
 <body>
-    <h1>My Contact Details</h1>
-    <P>
-        Email:azharsayed053@gmail.com <br>
-        phone: 9152056109
-        
-    </P>
-    <hr>
-    <form action="mailto:azhar.a.sayed@slrtce.in" method="post" enctype="text/plain">
-        <label>Your Name:</label>
-        <input type="text" name="yourName"> <br>
-        <label>Password:</label>
-        <input type="password" name="YourPassword" id=""><br>
-        <label>Email:</label>
-        <input type="email" name="Your Email" id=""><br>  
-        <label>Your Message:</label><br>
+    <p>PH.:9152056109</p>
+    <P>email: azharssayed053@gmail.com</P>
+    <form action="mailto:azharsayed053@gmail.com" enctype="text/plain">
+        <label>Your Name: </label>
+        <input type="text" name="YourName"> <br>
+        <label for="">Your Email:</label>
+        <input type="email" name="YourEmail"><br>
+        <label for="">Your Message: </label><br>
         <textarea name="YourMessage" id="" cols="30" rows="10"></textarea><br>
         <input type="submit">
-
 
     </form>
 </body>
